name:                i18n
version:             0.4.0.0
build-type:          Simple
synopsis:            Internationalization for Haskell
category:            Text
license:             BSD3
license-file:        LICENSE
copyright:           (c) 2008 Eugene Grigoriev
author:              Eugene Grigoriev <eugene.grigoriev@gmail.com>
maintainer:          Eugene Grigoriev <eugene.grigoriev@gmail.com>
stability:           experimental
description:         Internationalization for Haskell
cabal-version:       >=1.10

library
    hs-source-dirs:    src
    exposed-modules:   Data.Text.I18n
                     , Data.Text.I18n.Po
                     , Data.Text.I18n.Shakespeare
                     , Data.Text.I18n.Types
    build-depends:     base >= 4.7 && < 5
                     , containers
                     , filepath
                     , directory
                     , parsec
                     , mtl
                     , shakespeare
                     , text
    default-language:  Haskell2010

executable i18n
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , i18n
                     , optparse-applicative
                     , pcre-light
                     , raw-strings-qq
                     , string-conv
  default-language:    Haskell2010

test-suite i18n-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , containers
                     , hspec
                     , i18n
                     , tasty
                     , tasty-hspec
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  default-language:    Haskell2010