name:                i18n
version:             0.4.0.0
description:         Internationalisation for Haskell
license-file:        LICENSE
license:             BSD3

author:              Eugene Grigoriev <eugene.grigoriev@gmail.com>
bug-reports:         https://github.com/filib/i18n/issues
build-type:          Simple
cabal-version:       >=1.10
category:            Text
copyright:           (c) 2008-2016 Eugene Grigoriev
homepage:            https://github.com/filib/i18n
maintainer:          Philip Cunningham <hello@filib.io>
stability:           experimental
synopsis:            Internationalization for Haskell

Source-repository head
  type: git
  location: https://github.com/filib/i18n

library
    hs-source-dirs:    src
    exposed-modules:   Data.Text.I18n
                     , Data.Text.I18n.Po
                     , Data.Text.I18n.Types
    build-depends:     base >= 4.11 && < 5
                     , containers >= 0.6.8.0
                     , filepath >= 1.4.2.0
                     , directory >= 1.3.8.1
                     , parsec >= 3.1.17
                     , mtl >= 2.3.1
                     , text >= 2.1
                     , transformers >= 0.6.0.1
    default-language:  Haskell2010

test-suite i18n-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , containers
                     , hspec
                     , i18n
                     , tasty
                     , tasty-hspec
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010
